<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <RadioGroup
        android:id="@+id/radioMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/normalMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normalMode"
            android:textColor="@color/white"
            android:checked="true" />

        <RadioButton
            android:id="@+id/contextualMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/contextualMode" />

    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pollServerUrlHint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:id="@+id/pollServerUrlEntry" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pollServerPortHint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:id="@+id/pollServerPortEntry" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sequenceIdHint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:id="@+id/sequenceIdEntry" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:id="@+id/startButton"
        android:text="@string/startApplication"
        />
</LinearLayout>